--- a/rebuildingakidney/index.html
+++ b/rebuildingakidney/index.html
@@ -6,30 +6,6 @@ title: (Re)Building A Kidney (RBK) Consortium
 
 <div class="home">
   <div class="home-main">
-    <div class="row" id="home-search">
-      <div class="col-md-12 home-search">
-        <form class="input-group search">
-          <div class="input-group-btn search-panel">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <span id="search_concept">Search by:</span> <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#gene">Gene</a></li>
-                <li><a href="#anatomy">Anatomy</a></li>
-              </ul>
-          </div>
-          <input type="hidden" name="search_param" value="all" id="search_param">
-          <input type="text" class="form-control" name="x" placeholder="Search our data...">
-
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="submit" onClick="search('recordset')">
-              <i class="fa fa-search" aria-hidden="true"></i>
-            </button>
-          </span>
-
-        </form>
-      </div>
-    </div>
     <div class="container content-inner">
 
     <section class="section-cta section row clear">
@@ -102,22 +78,67 @@ title: (Re)Building A Kidney (RBK) Consortium
   <p><i class="fa fa-envelope"></i> To stay updated about <a href="/collaborate.html">funding opportunities</a> and project updates, <a href="http://eepurl.com/buBSC5">sign up for our mailing list here</a>.</p>
   </div>
 
+  <div class="container content-inner data">
+    <div class="col-md-12">
+      <div class="shortcuts alternate">
+      <h2>Browse these shortcuts to RBK's data available in ATLAS-D2K</h2>
+      <div class="row shortcut-links">
+        <div class="col-md-4">
+          <ul>
+            <li class="sub-parent">IMAGING DATA</li>
+            <li class="info-label"><a class="tooltiplink" href="#">Specimen Data <i class="fas fa-info-circle"></i><span>Represents the tissue used in experiments and is where imaging data is stored.</span></a>
+              <ul class="sub-list">
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAAqGJsjo2HiwIADCfKgYRNxokoIg9o7OlKYAQgDSwcZAA@sort(RCT::desc::,Stage_Ordinal,RID)">Immunohistochemistry (IHC)</a></li>
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBipoYmyOjYeLAgAMJ8qBhE3GiSgiD2js6UpgBCANJBxkA@sort(RCT::desc::,Stage_Ordinal,RID)">In-Situ Hybridization (ISH)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li class="sub-parent">OMICS DATA</li>
+            <li class="info-label"><a class="tooltiplink" href="">Study data  <i class="fas fa-info-circle"></i><span>Describes studies of omics data, organized by Experiment and Replicate records.</span></a>
+              <ul class="sub-list">
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOr6Rsjo2HiwIADCKBCoGGKEaELsIJHRsZRUAEIA0jmGQA@sort(RMT::desc::,RID)">mRNA-Seq</a></li>
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUskATPpGyOjYeLAgAMIoEKgYYoRoQuwgkdGxlFQAQgDS2YZAA@sort(RMT::desc::,RID)">scRNA-Seq</a></li>
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjABsALQAigDSNF76Rsjo2HiwIADCKBCoGGKEaELsIJHRsZRUAELpOYZAA@sort(RMT::desc::,RID)">snRNA-Seq</a></li>
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAayfpGyOjYeLAgAMIoEKgYYoRoQuwgkdGxlFQAQgDS2YZAA@sort(RMT::desc::,RID)">ChiP-Seq</a></li>
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjABsALQqAJoAClT6Rsjo2HiwIADCKBCoGGKEaELsIJHRsZRUAEIA0jmGQA@sort(RMT::desc::,RID)">Metabolomics</a></li>
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUskADPpGyOjYeLAgAMIoEKgYYoRoQuwgkdGxlFQAQgDS2YZAA@sort(RMT::desc::,RID)">ATAC-Seq</a></li>
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjADsALScAJwA0gAs+kbI6Nh4sCAAwigQqBhihGhC7CCR0bGUVABCGbmGQA@sort(RMT::desc::,RID)">Spatial Transcriptomics</a></li>
+              </ul>
+            </li>
+            <li class="sub-parent">VISUALIZATION TOOLS</li>
+            <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Visualizations (Violin Plots)</a></li>
+            <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcPWR0bDxYEABhSVQMcTQAW3YQLAALFEJcJEoqACEAaRDdIA@sort(RMT::desc::,RID)">scRNA-Seq Visualization (Scatter Plots)</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li class="sub-parent">RESOURCES</li>
+            <li><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArABY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">Publications</a></li>
+            <li><a href="/chaise/recordset/#2/Protocol:Protocol/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEABQxSJSxQBsQAaa2+xpgfQGEUEVBiIBLNAFseAMwDWOAJ4gAugF92AJQCSAERXssACxSjcSSgEUAtAGYA0gFYALCtVqgA@sort(RMT::desc::,RID)">Protocols</a></li>
+            <li><a href="/chaise/recordset/#2/Protocol:Functional_Assay_Handbook@sort(RID)">Functional Assays Handbook</a></li>
+            <li><a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRwBtaB9AGQEsI8AaEAJRwAcUGIjgwMa9ZmxxiUEVEJZoAtgwBmAaxwBPEAF0Avl24BJACJ6uWABYoWuJJQCKAWgDMAaQCsAFj36DQA@sort(ID)">Reporter Cell Line</a></li>
+            <li><a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line@sort(RID)">Parental Cell Line</a></li>
+            <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZWYH0AVHEiJIeAYRQRUGemgC2PAGYBrHCwC6AX3YAlAJIAREGvZYAFijq4klAIoBaAMwBpAKwAWIxs1A@sort(RID)">Antibody Validation</a></li>
+            <li><a href="/chaise/recordset/#2/Antibody:Antibodies/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZSjpyQH0AwigioM9NAFt+AMwDWOFgF0AvuwBKASQAiIJeywALFHVxJKARQC0AZgDSAVgAselaqA@sort(RID)">Antibody Listings</a></li>
+
+            <li class="sub-parent">SEARCH BY...</li>
+            <li><a href="">RBK Investigator</a></li>
+            <li class="info-label"><a class="tooltiplink" href="/chaise/recordset/#2/Common:Collection/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaalAG3ZyyIEtGA+jQioMfNLQEAzANY4AniAC6AX1YAlAJIARZaywALFL1xJKARQC0AZgDSAVgAsylaqA@sort(RMT::desc::,RID)">Data Collections <i class="fas fa-info-circle"></i><span>Customized collections of datasets, usually to collect data within a publication.</span></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
   <section class="section-blurb">
     <div class="container content-inner features">
       <section class="section-blurb section row clear">
         <div class="col six blurb mobile-full">
-          <section id="twitter">
-            <a class="twitter-timeline"
-            data-lang="en"
-            data-width="500"
-            data-height="400"
-            data-theme="light"
-            data-link-color="#407cca"
-            dnt="true"
-            href="https://twitter.com/ReBuildaKidney">Tweets by ReBuildaKidney</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-          </section>
-
+          <p>Add Publications here</p>
         </div>
         <div class="col six mobile-full">
 
