progress on rbk and gudmap landing pages

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -15,6 +15,7 @@ tags: []
     <div class="row shortcut-links">
       <div class="col-md-4">
         <ul>
+          <li class="sub-parent">SPECIES include Mouse, Human and Dog</li>
           <li class="sub-parent">IMAGING DATA</li>
           <li class="info-label"><a class="tooltiplink" href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gGEUJUMAXASzQFsQAaELACxQtyTnhAHEBVAEQCyAQQAKIALoBfaUA@sort(RCT::desc::,Stage_Ordinal,RID)">Specimen Data <i class="fas fa-info-circle"></i><span>Represents the tissue used in experiments and is where imaging data is stored.</span></a>
             <ul class="sub-list">
@@ -41,8 +42,8 @@ tags: []
           </li>
           <li><a href="/chaise/recordset/#2/Microarray:Sample@sort(RID)">Microarray (Sample)</a></li>
           <li class="sub-parent">VISUALIZATION TOOLS</li>
-          <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Visualizations (Violin Plots)</a></li>
-          <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcPWR0bDxYEABhSVQMcTQAW3YQLAALFEJcJEoAcQBVCIBZOgAFEN0gA@sort(RMT::desc::,RID)">scRNA-Seq Visualization (Scatter Plots)</a></li>
+          <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Violin Plots</a></li>
+          <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcPWR0bDxYEABhSVQMcTQAW3YQLAALFEJcJEoAcQBVCIBZOgAFEN0gA@sort(RMT::desc::,RID)">scRNA-Seq Scatter Plots</a></li>
         </ul>
       </div>
       <div class="col-md-4">
@@ -53,7 +54,6 @@ tags: []
           <li><a href="/chaise/recordset/#2/Schematics:Schematic_Group@sort(ID)">Mouse Schematics</a></li>
           <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRwBtaB9AGQEsI8AaEAWXSRwYBlIhjBsGVFBFQYiLNAFsGAMwDWOAJ4gAugF8uAJQCSAER1csACxQtcSSgEUAtAGYA0gFYAbDt16gA@sort(ID)">Mouse Strains</a></li>
           <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZWYH0AVHEiJIeAYRQRUGemgC2PAGYBrHCwC6AX3YAlAJIAREGvZYAFijq4klAIoBaAMwBpAKwA2Ixs1A@sort(RID)">Antibody Validation</a></li>
-          <li><a href="/chaise/recordset/#2/Antibody:Antibodies/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZSjpyQH0AwigioM9NAFt+AMwDWOFgF0AvuwBKASQAiIJeywALFHVxJKARQC0AZgDSAVgBselaqA@sort(RID)">Antibody Listings</a></li>
           <li class="sub-parent">SEARCH BY...</li>
           <li><a href="/chaise/recordset/#2/Common:Principal_Investigator/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gEkkB9AcQFUARAWQEEAFY+gkAGhCwAsUBLXJOPAAuGNDgC6AXylA@sort(RID)">GUDMAP Investigator</a></li>
           <li class="info-label"><a class="tooltiplink" href="/chaise/recordset/#2/Common:Collection/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaalAG3ZyyIEtGA+jQioMfNLQEAzANY4AniAC6AX1YAlAJIARZaywALFL1xJKARQC0AZgDSAVgBsylaqA@sort(RID)">Data Collections <i class="fas fa-info-circle"></i><span>Customized collections of datasets, usually to collect data within a publication.</span></a></li>
