--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ custom_js:
                         <i class="stat-icon fa-solid fa-flask-gear"></i>
                         <div>
                             <h2 class="stat-number">
-                              <a href="#">20
-                                <!--
-                              <span class="stat-number" id="stat-assay-number">
+                              <a href="#">
 
+                              <span class="stat-number" id="stat-assay-number">
+                                <!-- spinner -->
                                 <i class="fas fa-sync-alt fa-spin"></i>
                               </span>
-                              -->
+
                             </a></h2>
                             <p class="statistic-label">Assay Types</p>
                         </div>
