--- a/rebuildingakidney/index.html
+++ b/rebuildingakidney/index.html
@@ -25,7 +25,9 @@ title: (Re)Building A Kidney (RBK) Consortium
                   </li>
                   <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/chaise/recordset/#2/Protocol:Protocol/Consortium=RBK?pcid=static/home">Lab Protocols</a>
                   </li>
+                  <!--
                   <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/chaise/recordset/#2/Common:Gene?pcid=static/home">Genes</a>
+                    -->
                   </li>
                   <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/cell-lines/">iPSC Cell Lines</a>
                   </li>
@@ -47,10 +49,10 @@ title: (Re)Building A Kidney (RBK) Consortium
               <i class="fa fa-dollar fa-fw cta-icon"></i>
               <h2>Funding opportunities</h2>
               <ul class="fa-ul">
-                <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/collaborate.html#ppp" class="">
-                  Apply for the Partnership Project Program
+                <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/collaborate/op-pools/" class="">
+                  Apply for an Opportunity Pool Program
                 </a></li>
-                <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/collaborate.html#collaborator" class="">
+                <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/collaborate/rbk-collab/" class="">
                   Apply to become a Collaborating Project
                 </a></li>
               </ul>
@@ -85,11 +87,18 @@ title: (Re)Building A Kidney (RBK) Consortium
       <div class="row shortcut-links">
         <div class="col-md-4">
           <ul>
+            <li class="sub-parent">SPECIES include Human and Mouse</li>
             <li class="sub-parent">IMAGING DATA</li>
             <li class="info-label"><a class="tooltiplink" href="#">Specimen Data <i class="fas fa-info-circle"></i><span>Represents the tissue used in experiments and is where imaging data is stored.</span></a>
               <ul class="sub-list">
                 <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAAqGJsjo2HiwIADCfKgYRNxokoIg9o7OlKYAQgDSwcZAA@sort(RCT::desc::,Stage_Ordinal,RID)">Immunohistochemistry (IHC)</a></li>
                 <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBipoYmyOjYeLAgAMJ8qBhE3GiSgiD2js6UpgBCANJBxkA@sort(RCT::desc::,Stage_Ordinal,RID)">In-Situ Hybridization (ISH)</a></li>
+                <!--
+                <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjABsALRU8fT6BoZAA@sort(RMT::desc::,RID)">Imaging Mass Cytometry (IMC)</a></li>
+                -->
+                <li class="sub-parent">VISUALIZATION TOOLS</li>
+                <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Violin Plots</a></li>
+                <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcPWR0bDxYEABhSVQMcTQAW3YQLAALFEJcJEoqACEAaRDdIA@sort(RMT::desc::,RID)">scRNA-Seq Scatter Plots</a></li>
               </ul>
             </li>
           </ul>
@@ -108,9 +117,6 @@ title: (Re)Building A Kidney (RBK) Consortium
                 <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjADsALScAJwA0gAs+kbI6Nh4sCAAwigQqBhihGhC7CCR0bGUVABCGbmGQA@sort(RMT::desc::,RID)">Spatial Transcriptomics</a></li>
               </ul>
             </li>
-            <li class="sub-parent">VISUALIZATION TOOLS</li>
-            <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Visualizations (Violin Plots)</a></li>
-            <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcPWR0bDxYEABhSVQMcTQAW3YQLAALFEJcJEoqACEAaRDdIA@sort(RMT::desc::,RID)">scRNA-Seq Visualization (Scatter Plots)</a></li>
           </ul>
         </div>
         <div class="col-md-4">
@@ -118,11 +124,9 @@ title: (Re)Building A Kidney (RBK) Consortium
             <li class="sub-parent">RESOURCES</li>
             <li><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArABY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">Publications</a></li>
             <li><a href="/chaise/recordset/#2/Protocol:Protocol/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEABQxSJSxQBsQAaa2+xpgfQGEUEVBiIBLNAFseAMwDWOAJ4gAugF92AJQCSAERXssACxSjcSSgEUAtAGYA0gFYALCtVqgA@sort(RMT::desc::,RID)">Protocols</a></li>
-            <li><a href="/chaise/recordset/#2/Protocol:Functional_Assay_Handbook@sort(RID)">Functional Assays Handbook</a></li>
-            <li><a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRwBtaB9AGQEsI8AaEAJRwAcUGIjgwMa9ZmxxiUEVEJZoAtgwBmAaxwBPEAF0Avl24BJACJ6uWABYoWuJJQCKAWgDMAaQCsAFj36DQA@sort(ID)">Reporter Cell Line</a></li>
-            <li><a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line@sort(RID)">Parental Cell Line</a></li>
+            <li><a class="tooltiplink" href="/resources/functional-assays/">Functional Assays Handbook <i class="fas fa-info-circle"></i><span>A collection of functional assays with a current focus on physiological assays.</span></a></li>
+            <li><a href="/resources/cell-lines/">Cell Lines (Available by request)</a></li>
             <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZWYH0AVHEiJIeAYRQRUGemgC2PAGYBrHCwC6AX3YAlAJIAREGvZYAFijq4klAIoBaAMwBpAKwAWIxs1A@sort(RID)">Antibody Validation</a></li>
-            <li><a href="/chaise/recordset/#2/Antibody:Antibodies/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZSjpyQH0AwigioM9NAFt+AMwDWOFgF0AvuwBKASQAiIJeywALFHVxJKARQC0AZgDSAVgAselaqA@sort(RID)">Antibody Listings</a></li>
 
             <li class="sub-parent">SEARCH BY...</li>
             <li><a href="">RBK Investigator</a></li>
@@ -137,8 +141,14 @@ title: (Re)Building A Kidney (RBK) Consortium
   <section class="section-blurb">
     <div class="container content-inner features">
       <section class="section-blurb section row clear">
-        <div class="col six blurb mobile-full">
-          <p>Add Publications here</p>
+        <div class="col six mobile-full">
+          <h3>RBK Publications</h3>
+
+          <ul class="list-group">
+            <li class="list-group-item"><h4 class="media-heading"><a href="https://www.doi.org/10.1016/j.devcel.2022.07.004">Single-cell and spatial mapping identify cell types and signaling networks in the human ureter</a> <small><em>(Dev Cell, August 2022)</em></small></h4></li>
+            <li class="list-group-item"><h4 class="media-heading"><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a> <small><em>(Dev Bio, September 2021)</em></small></h4></li>
+            <li class="list-group-item"><h4 class="media-heading"><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in <em>Pax3</em> spina bifida mutants underlies deficits of bladder innervation and function</a> <small><em>(Dev Bio, August 2021)</em></small></h4></li>
+          </ul>
         </div>
         <div class="col six mobile-full">
 
