--- a/rebuildingakidney/index.html
+++ b/rebuildingakidney/index.html
@@ -141,16 +141,16 @@ title: (Re)Building A Kidney (RBK) Consortium
   <section class="section-blurb">
     <div class="container content-inner features">
       <section class="section-blurb section row clear">
-        <div class="col six mobile-full">
+        <div class="col-md-6 mobile-full">
           <h3>RBK Publications</h3>
 
-          <ul class="list-group">
+          <ul class="posts">
             <li class="list-group-item"><h4 class="media-heading"><a href="https://www.doi.org/10.1016/j.devcel.2022.07.004">Single-cell and spatial mapping identify cell types and signaling networks in the human ureter</a> <small><em>(Dev Cell, August 2022)</em></small></h4></li>
             <li class="list-group-item"><h4 class="media-heading"><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a> <small><em>(Dev Bio, September 2021)</em></small></h4></li>
             <li class="list-group-item"><h4 class="media-heading"><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in <em>Pax3</em> spina bifida mutants underlies deficits of bladder innervation and function</a> <small><em>(Dev Bio, August 2021)</em></small></h4></li>
           </ul>
         </div>
-        <div class="col six mobile-full">
+        <div class="col-md-6 mobile-full">
 
           <section id="news">
             <h3>Latest News</h3>
