--- a/rebuildingakidney/projects/integrating-ub-collecting-systems/index.html
+++ b/rebuildingakidney/projects/integrating-ub-collecting-systems/index.html
@@ -1,6 +1,6 @@
 ---
 # req_authn: authn
-layout: rbk
+layout: rbk-sub
 tag:
 title: Integrating UB collecting systems into hPSC-derived kidney organoids
 redirect_from: /projects/integrating-ub-collecting-systems/
