--- a/rebuildingakidney/projects/visualizing-interactions-implanted-organoids/index.html
+++ b/rebuildingakidney/projects/visualizing-interactions-implanted-organoids/index.html
@@ -1,6 +1,6 @@
 ---
 # req_authn: authn
-layout: rbk
+layout: rbk-sub
 tag:
 title: Visualizing vascularization and cell interactions in implanted organoids
 ---
