--- a/tutorials/urogenital-dev/reproductive-system/index.html
+++ b/tutorials/urogenital-dev/reproductive-system/index.html
@@ -1,7 +1,7 @@
 ---
 layout: tutorials
 title: Development of the Murine Reproductive System
-attribution: Provided by Matt Kaufman, University of Edinburgh. Other contributors are Jamie Davies, Peter Koopman, Melissa Little, Cathy Mendelsohn, Gen Yamada and Andrew McMahon.<br/><small>2010</small>
+attribution: Provided by Matt Kaufman, University of Edinburgh. Other contributors are Jamie Davies, Peter Koopman, Melissa Little, Cathy Mendelsohn, Gen Yamada and Andrew McMahon.<br/><small>2010 (GUDMAP)</small>
 redirect_from:
   - /About/Tutorial/DevMRS.html
   - /tutorials/urogenital-dev/devmrs.html
