--- a/tutorials/urogenital-dev/urinary-system/index.html
+++ b/tutorials/urogenital-dev/urinary-system/index.html
@@ -1,7 +1,7 @@
 ---
 layout: tutorials
 title: Development of Murine Urinary System
-attribution: Provided by Matt Kaufman, University of Edinburgh. Other contributors are Jamie Davies, Peter Koopman, Melissa Little, Cathy Mendelsohn, Gen Yamada and Andrew McMahon.<br/><small>2010</small>
+attribution: Provided by Matt Kaufman, University of Edinburgh. Other contributors are Jamie Davies, Peter Koopman, Melissa Little, Cathy Mendelsohn, Gen Yamada and Andrew McMahon.<br/><small>2010 (GUDMAP)</small>
 redirect_from:
   - /About/Tutorial/DevMUS.html
   - /tutorials/urogenital-dev/devmus.html
@@ -294,7 +294,7 @@ redirect_from:
     <p align="right"></p>
     <p>&nbsp;</p>
     <p align="right"><a href="reproductive-system/">Development of the Murine Reproductive System &gt;&gt; </a></p>
-    <p>&nbsp;</p>
+    <p>&nbsp;</p></div>
 
 <script type="text/javascript">
     $(document).ready(function(){
