--- a/rebuildingakidney/projects/cell-specific-novel-therapies/index.html
+++ b/rebuildingakidney/projects/cell-specific-novel-therapies/index.html
@@ -1,6 +1,6 @@
 ---
 # req_authn: authn
-layout: rbk
+layout: rbk-sub
 tag:
 title: Cell specific delivery of novel therapies to enhance glomerular regeneration and repair
 ---
