--- a/rebuildingakidney/projects/index.html
+++ b/rebuildingakidney/projects/index.html
@@ -1,10 +1,10 @@
 ---
-layout: rbk
+layout: rbk-sub
 title: RBK Projects
 tag: projects
 ---
 
-<div class="container content-inner">
+
 
 <h2>Phase 2 Projects (Ongoing)</h2>
 
@@ -135,5 +135,3 @@ tag: projects
 	</ul>
 	{% endif %}
 {% endfor %}
-
-</div>
