--- a/tutorials/urogenital-dev/index.html
+++ b/tutorials/urogenital-dev/index.html
@@ -1,8 +1,7 @@
 ---
 layout: tutorials
-title: Urogenital System Development
-attribution: Provided by Matt Kaufman, University of Edinburgh.<br/>
-Other Contributors: Jamie Davies, Peter Koopman, Melissa Little, Cathy Mendelsohn, Gen Yamada, Andrew McMahon<br/><small>2010 (GUDMAP)</small>
+title: Urogenital System Development Overview
+attribution: Provided by Matt Kaufman, University of Edinburgh. Other Contributors are Jamie Davies, Peter Koopman, Melissa Little, Cathy Mendelsohn, Gen Yamada, Andrew McMahon<br/><small>2010 (GUDMAP)</small>
 description: Extensive tutorial that describes the development of the urogenital and reproductive systems with a focus on mouse.
 ---
 
