updating the page title to header 1

--- a/events/index.html
+++ b/events/index.html
@@ -3,6 +3,8 @@ layout: default
 title: ATLAS-D2K Events
 ---
 
+The following events represent internal meetings for the GUDMAP and RBK consortia:
+
 <ul>
   {% assign sorted_events = site.events | sort: "start_date" %}
   {% for event in sorted_events %}
