--- a/gudmap/contact/index.html
+++ b/gudmap/contact/index.html
@@ -4,7 +4,7 @@ title: Contact GUDMAP
 ---
 
 <div id="wufoo-w1emkyte0kg8ens">
-Fill out this <a href="https://isrd.wufoo.com/forms/w1emkyte0kg8ens">online form</a> to contact the GUDMAP Coordinating Center. You can also follow us on <a href="https://twitter.com/GUDMAP">Twitter</a> and <a href="https://www.facebook.com/GUDMAP/">Facebook</a>.
+Fill out this <a href="https://isrd.wufoo.com/forms/w1emkyte0kg8ens">online form</a> to contact the ATLAS-D2K Coordinating Center for communications regarding GUDMAP.
 
 </div>
 <script type="text/javascript">var w1emkyte0kg8ens;(function(d, t) {
