--- a/resources/disease/index.html
+++ b/resources/disease/index.html
@@ -6,7 +6,7 @@ redirect_from:
   - /disease/
 ---
 
-<p><strong>Quick Links:</strong></p>
+<p><strong>On this page:</strong></p>
 <ul>
   <li>Query Disease-Gene Associations (Coming Soon)</li>
   <li>Query Phenotype-Gene Associations (Coming Soon)</li>
