--- a/rebuildingakidney/about/index.html
+++ b/rebuildingakidney/about/index.html
@@ -111,5 +111,5 @@ title: About RBK
 <div class="citing">
 
 <h2><a name="citing" class="anchor"></a>Citing RBK</h2>
-<p>Please see the <a href="usage.html">Citing RBK</a> page for complete information.</p>
+<p>Please see the <a href="/rebuildingakidney/citing/">Citing RBK</a> page for complete information.</p>
 </div>
