fixed RBK layouts

--- a/rebuildingakidney/about/index.html
+++ b/rebuildingakidney/about/index.html
@@ -4,8 +4,9 @@ tag: about
 title: About RBK
 ---
 
+<section class="section-about container">
 <div class="lead">
-    {{ site.data.settings.blurb | markdownify }}
+    {{ site.data.rebuildingakidney.settings.blurb | markdownify }}
 </div>
 
 <ul>
@@ -115,3 +116,5 @@ title: About RBK
 <h2><a name="citing" class="anchor">Citing RBK</a></h2>
 <p>Please see the <a href="usage.html">Citing RBK</a> page for complete information.</p>
 </div>
+
+</section>
