reverting to original gudmap homepage

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -9,9 +9,10 @@ tags: []
 <div class="container-fluid content home" id="gudmap">
 <div class="row">
   <h1 class="tagline">The GenitoUrinary Development Molecular Anatomy Project (GUDMAP) provides data and tools<br/> that facilitate research on the GenitoUrinary (GU) tract for the scientific and medical community.</h1>
-  <div class="col-md-12">
+  <div class="col-md-8">
     <div class="shortcuts alternate">
-    <h2>Browse these shortcuts to GUDMAP's data available in ATLAS-D2K</h2>
+      <h2>Browse these data shortcuts for GUDMAP...
+  </h2>
     <div class="row shortcut-links">
       <div class="col-md-4">
         <ul>
@@ -62,127 +63,110 @@ tags: []
     </div>
   </div>
 </div>
-
-</div>
-<div class="row bottom">
-
-  <div class="col-md-4">
-    <h3>Tutorials <small><em><a href="/tutorials/">View all</a></em></small></h3>
-
-    <div class="media">
-      <div class="media-left">
-        <a href="/tutorials/innervation/">
-          <img class="media-object" src="/assets/img/tutorials/Fig5C_Alice Illustrations_PG_v4.png" alt="Illustration of pelvic ganglia and nerves">
-        </a>
-      </div>
-      <div class="media-body">
-        <h4 class="media-heading"><a href="/tutorials/innervation/">Lower Urinary Tract Innervation and its Development</a> <sup><em>New</em></sup></h4>
-      </div>
-    </div>
-
-    <div class="media">
-      <div class="media-left">
-        <a href="/tutorials/urogenital-dev/">
-          <img class="media-object" src="/assets/img/tutorials/TS21_WMISH_Mventral_crop-thumb.jpg" alt="urogenital system at approximately TS21">
-        </a>
-      </div>
-      <div class="media-body">
-        <h4 class="media-heading"><a href="/tutorials/urogenital-dev/">Urogenital System Development</a></h4>
-      </div>
-    </div>
-    <div class="media">
-    <div class="media-left">
-      <a href="/tutorials/kidney-dev/">
-        <img class="media-object" src="/assets/img/tutorials/mouse-vs-human-kidneyx895-thumb.jpg" alt="Mouse vs human kidney illustration">
-      </a>
-    </div>
-    <div class="media-body">
-      <h4 class="media-heading"><a href="/tutorials/kidney-dev/">Development of the Kidney in Mouse and Human</a></h4>
-    </div>
-  </div>
-  <!--
-  <div class="media">
-    <div class="media-left">
-      <a href="/tutorials/prostate-dev/">
-        <img class="media-object" src="/assets/img/tutorials/16dpc-UGS-wholemount-thumb.jpg" alt=" the UGS and other components of a 16 dpc (days post conception) male mouse lower urinary tract.">
-      </a>
-    </div>
-    <div class="media-body">
-      <h4 class="media-heading"><a href="/tutorials/prostate-dev/">Prostate Development</a></h4>
-    </div>
-  </div>
--->
-</div>
-  <div class="col-md-4">
-    <h3>Resources <small><em><a href="/resources/">View all</a></em></small></h3>
-    <ul class="list-group">
-      <li class="list-group-item"><h4 class="media-heading"><a href="/resources/genital-tubercule-atlas/">Mouse Genital Tubercule Atlas</a></h4></li>
-      <li class="list-group-item"><h4 class="media-heading"><a href="/resources/adult-mouse-penis-3d/">Mouse Penis 3D Atlas</a></h4></li>
-      <li class="list-group-item"><h4 class="media-heading"><a href="/resources/ontology/">Ontology</a></h4></li>
-    </ul>
-  </div>
-
   <div class="col-md-4 featured">
-
     <h3>Examples of GUDMAP imaging data</h3>
 
     <div class="image-carousel">
     {% include carousel.html %}
     </div>
 
-      <p class="signup"><a href="http://eepurl.com/hyUyjD" class="btn btn-success" role="button">Join our announcements list!</a></p>
-
-    </div>
-
-</div>
-<!-- integrate with bottom of page -->
-<div class="row" id="opps">
-  <h2>GUDMAP Highlights</h2>
-  <div class="col-md-4">
-    <h3>Funding Opportunities</h3>
-    <ul class="posts">
-      <li><a href="/collaboration/op-pool/">Learn about the 2024 GUDMAP Opportunity Pool (coming soon)</a></li>
-      <li><a href="/collaboration/rbk-collab/">Apply to be a GUDMAP Collaborating Group (open)</a></li>
-    </ul>
-  </div>
-  <div class="col-md-4">
-    <h3>Recent Publications</h3>
+    <h3>GUDMAP Publications: <a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArABY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">240+</a></h3>
     <ul class="posts">
       <li><a href="https://www.doi.org/10.1016/j.devcel.2022.07.004">Single-cell and spatial mapping identify cell types and signaling networks in the human ureter</a> <small><em>(Dev Cell, August 2022)</em></small></li>
       <li><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a> <small><em>(Dev Bio, September 2021)</em></small></li>
       <li><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in <em>Pax3</em> spina bifida mutants underlies deficits of bladder innervation and function</a> <small><em>(Dev Bio, August 2021)</em></small></li>
     </ul>
-    <a id="more-news" href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArABY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">more publications ></a>
+
+    <p class="signup"><a href="http://eepurl.com/hyUyjD" class="btn btn-success" role="button">Join our announcements list!</a></p>
+
   </div>
-  <div class="col-md-4">
-    <h3>Latest News</h3>
-    <ul class="posts">
-      {% assign counter = 0 %}
-        {% for post in site.posts %}
-          {% if post.tags contains 'gudmap' %}
-          {% assign counter = counter | plus: 1 %}
-          <li>
-            <a href="{{ post.url }}">{{ post.title }}</a><br/>
-            <time>
-              {{ post.date | date: "%m/%d/%Y" }}
-            </time>
-          </li>
-          {% if counter == 4 %}
-          {% break %}
-          {% endif %}
-          {% endif %}
-        {% endfor %}
-    </ul>
 
-  <a id="more-news" href="/rebuildingakidney/news/">more news ></a><br>
-  <!--    <a href="/publications/">publications ></a> -->
+  </div>
+  <div class="row bottom">
 
+    <div class="col-md-4">
+      <h3>Tutorials <small><em><a href="/tutorials/">View all</a></em></small></h3>
+
+      <div class="media">
+        <div class="media-left">
+          <a href="/tutorials/innervation/">
+            <img class="media-object" src="/assets/img/tutorials/Fig5C_Alice Illustrations_PG_v4.png" alt="Illustration of pelvic ganglia and nerves">
+          </a>
+        </div>
+        <div class="media-body">
+          <h4 class="media-heading"><a href="/tutorials/innervation/">Lower Urinary Tract Innervation and its Development</a> <sup><em>New</em></sup></h4>
+        </div>
+      </div>
+
+      <div class="media">
+        <div class="media-left">
+          <a href="/tutorials/urogenital-dev/">
+            <img class="media-object" src="/assets/img/tutorials/TS21_WMISH_Mventral_crop-thumb.jpg" alt="urogenital system at approximately TS21">
+          </a>
+        </div>
+        <div class="media-body">
+          <h4 class="media-heading"><a href="/tutorials/urogenital-dev/">Urogenital System Development</a></h4>
+        </div>
+      </div>
+      <div class="media">
+      <div class="media-left">
+        <a href="/tutorials/kidney-dev/">
+          <img class="media-object" src="/assets/img/tutorials/mouse-vs-human-kidneyx895-thumb.jpg" alt="Mouse vs human kidney illustration">
+        </a>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading"><a href="/tutorials/kidney-dev/">Development of the Kidney in Mouse and Human</a></h4>
+      </div>
+    </div>
+    <!--
+    <div class="media">
+      <div class="media-left">
+        <a href="/tutorials/prostate-dev/">
+          <img class="media-object" src="/assets/img/tutorials/16dpc-UGS-wholemount-thumb.jpg" alt=" the UGS and other components of a 16 dpc (days post conception) male mouse lower urinary tract.">
+        </a>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading"><a href="/tutorials/prostate-dev/">Prostate Development</a></h4>
+      </div>
+    </div>
+  -->
+    </div>
+    <div class="col-md-4">
+      <h3>Resources <small><em><a href="/resources/">View all</a></em></small></h3>
+      <ul class="list-group">
+        <li class="list-group-item"><h4 class="media-heading"><a href="/resources/genital-tubercule-atlas/">Mouse Genital Tubercule Atlas</a></h4></li>
+        <li class="list-group-item"><h4 class="media-heading"><a href="/resources/adult-mouse-penis-3d/">Mouse Penis 3D Atlas</a></h4></li>
+        <li class="list-group-item"><h4 class="media-heading"><a href="/resources/ontology/">Ontology</a></h4></li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <h3>Announcements</h3>
+      <ul class="posts">
+        {% assign counter = 0 %}
+          {% for post in site.posts %}
+            {% if post.tags contains 'gudmap' %}
+            {% assign counter = counter | plus: 1 %}
+            <li>
+              <a href="{{ post.url }}">{{ post.title }}</a><br/>
+              <time>
+                {{ post.date | date: "%m/%d/%Y" }}
+              </time>
+            </li>
+            {% if counter == 4 %}
+            {% break %}
+            {% endif %}
+            {% endif %}
+          {% endfor %}
+      </ul>
+
+    <a id="more-news" href="/gudmap/news/">more news ></a><br>
+    <!--    <a href="/publications/">publications ></a> -->
+    </div>
 
   </div>
 </div>
 
 
-</div>
 <script>
 
 $(document).ready(function(){
