returning style for gudmap news

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -141,12 +141,12 @@ tags: []
     </div>
     <div class="col-md-4">
       <h3>Announcements</h3>
-      <ul class="posts">
+      <ul class="list-group posts">
         {% assign counter = 0 %}
           {% for post in site.posts %}
             {% if post.tags contains 'gudmap' %}
             {% assign counter = counter | plus: 1 %}
-            <li>
+            <li class="list-group-item">
               <a href="{{ post.url }}">{{ post.title }}</a><br/>
               <time>
                 {{ post.date | date: "%m/%d/%Y" }}
