tweaking gudmap homepage styles

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -11,8 +11,7 @@ tags: []
   <h1 class="tagline">The GenitoUrinary Development Molecular Anatomy Project (GUDMAP) provides data and tools<br/> that facilitate research on the GenitoUrinary (GU) tract for the scientific and medical community.</h1>
   <div class="col-md-8">
     <div class="shortcuts alternate">
-      <h2>Browse these data shortcuts for GUDMAP...
-  </h2>
+      <h2>Browse these data shortcuts for GUDMAP...</h2>
     <div class="row shortcut-links">
       <div class="col-md-4">
         <ul>
