replacing fontawesome icon

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ custom_js:
             <div class="col-md-3">
                 <div class="well">
                     <div class="statistic-container">
-                        <i class="stat-icon fa-solid fa-flask-gear"></i>
+                        <i class="stat-icon fa-solid fa-flask"></i>
                         <div>
                             <h2 class="stat-number">
                               <a href="#">
